@@ -11,6 +11,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10763: subprocess.communicate() closes stdout and stderr if both are
+  pipes (bug specific to Windows).
+
 - Issue #1693546: fix email.message RFC 2231 parameter encoding to be in better
   compliance (no "s around encoded values).
 
